[package]
name = "marlin"
version = "0.1.0"
authors = [
  "Alessandro Chiesa <alexch@berkeley.edu>",
  "Mary Maller <mary.maller.15@ucl.ac.uk>",
  "Yuncong Hu <huyuncongh@gmail.com>",
  "Pratyush Mishra <pratyush@berkeley.edu>",
  "Noah Vesely <noah.vesely.18@ucl.ac.uk>",
  "Nicholas Ward <npward@berkeley.edu>",
]
description = "A library for the Marlin preprocessing zkSNARK"
repository = "https://github.com/scipr/marlin"
documentation = "https://docs.rs/marlin/"
keywords = ["cryptography", "polynomial commitments", "zkSNARK"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
algebra = { git = "https://github.com/HorizenOfficial/ginger-lib", branch = "algebra_ocl", features = ["parallel", "bls12_381", "jubjub", "bn_382", "tweedle"]}
algebra-utils = { git = "https://github.com/HorizenOfficial/ginger-lib", branch = "algebra_ocl", features = [ "parallel", "fft", "bn_382", "tweedle" ] }
primitives = { git = "https://github.com/HorizenOfficial/ginger-lib", branch = "algebra_ocl"}
bench-utils = { git = "https://github.com/HorizenOfficial/ginger-lib", branch = "algebra_ocl"}
r1cs-core = { git = "https://github.com/HorizenOfficial/ginger-lib", branch = "algebra_ocl"}
r1cs-std = { git = "https://github.com/HorizenOfficial/ginger-lib", branch = "algebra_ocl", features = ["bn_382", "tweedle"]}

poly-commit = { git = "https://github.com/HorizenLabs/poly-commit", branch = "dev" }

rand = "0.7"
rand_core = { version = "0.5" }
rand_chacha = { version = "0.2.1", default-features = false }
rayon = { version = "1" }
digest = { version = "0.8" }
derivative = { version = "2", features = ["use_core"] }

[dev-dependencies]
blake2 = { version = "0.8", default-features = false }
criterion = "0.3"
rand_xorshift = "0.2"

[features]
print-trace = [ "bench-utils/print-trace" ]
asm = [ "algebra/llvm_asm" ]
parallel = [ "algebra/parallel", "algebra-utils/parallel" ]
gpu = [ "algebra-utils/gpu", "poly-commit/gpu" ]

[[bench]]
name = "bn382_test_circuits"
path = "benches/bn_382_test_circuits.rs"
harness = false
required-features = ["parallel", "asm", "print-trace"]

[[bench]]
name = "tweedle_test_circuits"
path = "benches/tweedle_test_circuits.rs"
harness = false
required-features = ["parallel", "asm", "print-trace"]

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = false
debug = false

[profile.bench]
opt-level = 3
rpath = false
lto = "thin"
incremental = true
debug-assertions = false
debug = false

[profile.dev]
opt-level = 3
rpath = false
lto = "thin"
incremental = true
debug-assertions = false
debug = false

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = false
debug = false